// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<WithStyles(ForwardRef(TextField))
  InputProps={
    Object {
      "endAdornment": <InputEnd />,
    }
  }
  className=""
  disabled={false}
  error={false}
  fullWidth={true}
  helperText=""
  id=""
  margin="normal"
  multiline={false}
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  required={false}
  rows={1}
  select={false}
  type="text"
  value=""
/>
`;

exports[`renders disabled 1`] = `
<WithStyles(ForwardRef(TextField))
  InputProps={
    Object {
      "endAdornment": <InputEnd />,
    }
  }
  className=""
  disabled={true}
  error={false}
  fullWidth={true}
  helperText=""
  id=""
  margin="normal"
  multiline={false}
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  required={false}
  rows={1}
  select={false}
  type="text"
  value=""
/>
`;
